# hftbattle

./: CMakeLists.txt  README.md  SecuritiesInfo.tsv  build.py  download.py  duel_config.json  linux_launcher  mac_launcher  packages_mac.sh  packages_ubuntu.sh  run.py
include/: deal.h  execution_report.h  order.h  order_book.h  participant_strategy.h  quote.h  quotes_holder.h  security_orders_snapshot.h  strategy_maker.h
include/base/: common_enums.h  constants.h  decimal.h  exception.h  json.h  log.h  perf_time.h  pows10.h  string_stream.h  string_view.h
include/helpers/: id_types.h
lib/: libpython_defs.dylib  libsimulator_lib.dylib
strategies/base_strategy/: base_strategy.cpp
strategies/improved_strategy/: improved_strategy.cpp  improved_strategy.json
strategies/python_strategy/: common_enums.py  python_strategy.py
strategies/python_strategy/python_defs/: defs.pxd  py_defs.pyx
strategies/sample_strategy/: sample_strategy.cpp
strategies/stay_on_best_price_improved_strategy/: stay_on_best_price_improved_strategy.cpp
strategies/template_strategy/: template_strategy.cpp
